<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UsuarioLecturista</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Usuario Lecturista</string>
    <string name="title_activity_intermediate">IntermediateActivity</string>
    <string name="title_activity_service_chooser">ServiceChooserActivity</string>
    <string name="title_activity_main_drawer">MainDrawerActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="label_select_cycle">Seleccione un Ciclo</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>

    <!--Parse-->
    <string name="parse_app_id">vewdKbKAPt6y9ufviEEYHlq62dXhlEAPldiwNi5P</string>
    <string name="parse_client_key">ElCkYKmgcL1RNtZL1qF3YIBSdtNqeEFiTOTQ46n7</string>
    <string name="facebook_app_id">1475669572699600</string>


    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Lecturas</item>
        <item>Promociones</item>
        <item>Notificaciones</item>
        <item>Contacto</item>
        <item>Ajustes</item>
    </string-array>

    <!-- Nav Drawer Menu Items for prepay -->
    <string-array name="nav_drawer_items_prepay">
        <item>Pre-pago</item>
        <item>Histórico</item>
        <item>Promociones</item>
        <item>Notificaciones</item>
        <item>Contacto</item>
        <item>Ajustes</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_equalizer_grey600_24dp</item>
        <item>@drawable/ic_new_releases_grey600_24dp</item>
        <item>@drawable/ic_notifications_grey600_24dp</item>
        <item>@drawable/ic_gps_fixed_grey600_24dp</item>
        <item>@drawable/ic_settings_grey600_24dp</item>
    </array>

    <array name="nav_drawer_icons_prepay">
        <item>@drawable/ic_schedule_grey600_24dp</item>
        <item>@drawable/ic_equalizer_grey600_24dp</item>
        <item>@drawable/ic_new_releases_grey600_24dp</item>
        <item>@drawable/ic_notifications_grey600_24dp</item>
        <item>@drawable/ic_gps_fixed_grey600_24dp</item>
        <item>@drawable/ic_settings_grey600_24dp</item>
    </array>

    <!--Prepay Mode-->
    <string name="toolbarTitlePrepaidMode">Pre-Pago</string>
    <string name="prepayLabelPrepaidDaysLeft">Dias de pre-pago restantes</string>
    <string name="prepayLabelCubicMetersLeft">Metros cúbicos restantes</string>
    <string name="prepayLabelBeginDate">Fecha inicio del pre-pago:</string>
    <string name="prepayLabelEndDate">Fecha final del pre-pago:</string>

    <!-- Readings -->
    <string name="toolbarTitleReadings">Lecturas</string>
    <string name="toolbarTitleHistoricReadings">Histórico-Lecturas</string>
    <string name="readingsLabelsLastReadingDay">Lectura realizada el día:</string>
    <string name="readingsLabelsTotalAmount">Metros cúbicos este periodo:</string>
    <string name="readingsLabelsLimitDate">Fecha limite de pago:</string>
    <string name="readingsLabelsNoReadingsToShow">No hay lecturas para mostrar</string>
    <string name="readingsLabelsCameraInvitation">Tome una nueva lectura!!</string>


    <!--Bills-->
    <string name="toolbarTitleBills">Facturas</string>
    <string name="toolbarTitleHistoricBills">Histórico-Facturas</string>
    <string name="billsLabelsLastBillAmount">Total factura:</string>
    <string name="billsLabelsLastBillStatus">Estado:</string>
    <string name="billsLabelsSomething">3</string>
    <string name="billsLabelsToPay">Total de la factura a pagar:</string>
    <string name="billsLabelsNoBillsToShow">No hay facturas para mostrar</string>
    <string name="billsLabelsPrepayInvitation">Pre-pague litros y ahorre!!</string>
    <string name="billsLabelsPayInvitation">Paga tu factura!!</string>
    <string name="billsLabelsButtonNewBill">Nueva factura</string>
    <string name="billsLabelsDate">Fecha:</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- PayOptions -->
    <string name="textAddCreditCard">Agregar tarjeta</string>
    <string name="labelPayInOxxo">Pague en el Oxxo</string>
    <string name="textCreditCard">Tarjeta de crédito</string>
    <string name="labelPaymentOptionDesc">Seleccione una opción para pagar:</string>
    <string name="toolbarTitlePayOptions">Opciones de Pago</string>

    <!--Prepaid-->
    <string name="toolbarTitlePrepaidOptions">Pre-pago</string>
    <string name="number_zero">0</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="number_ten">10</string>
    <string name="keyboard_clear">borrar</string>
    <string name="desc_liters">Litros</string>
    <string name="desc_cubic_meters">Metros Cúbicos</string>
    <string name="labelPrepaidPriceToPay">Precio a pagar:</string>


    <!-- Add Credit Card -->
    <string name="labelCreditCardType">Tipo de Tarjeta</string>
    <string name="labelCreditCardNumber">Numero de Tarjeta</string>
    <string name="labelNameOnCreditCard">Nombre que aparece en la Tarjeta</string>
    <string name="labelSecurityCode">CCV</string>
    <string name="labelExpirationDate">Fecha de Expiración</string>
    <string name="labelButtonAddCard">Agregar</string>
    <string name="labelCheckBoxAgreedWithCCTAC">Estoy de acuerdo con los términos y condiciones</string>
    <string name="toolbarTitleAddCreditCard">Agregar Tarjeta</string>

    <!-- Pay Fragment -->
    <string name="toolbarTitlePayFragment">Pagar</string>
    <string name="labelButtonPayFragmentPay">Pagar</string>
    <string name="labelSubTotal">Total a pagar:</string>

    <!-- Promotions fragment -->
    <string name="toolbarTitlePromotionsFragment">Promociones</string>

    <!-- Notifications fragment -->
    <string name="toolbarTitleNotificationsFragment">Notificaciones</string>
    <string name="infoNotificationsFragmentSwipe">Desliza para eliminar la notificación</string>

    <!-- Contact fragment -->
    <string name="toolbarTitleContactFragment">Contacto</string>

    <!--Settings Fragment-->
    <string name="toolbarTitleSettingsFragment">Ajustes</string>

    <!-- MeterRegistration fragment -->
    <string name="toolbarTitleMeterRegistrationFragment">Registro de Medidor</string>
    <string name="labelMeterNumber">Numero de contrato</string>
    <string name="btnAdd">Agregar</string>

    <!--Camera-->
    <string name="no_image">No hay imagen para mostrar</string>
    <string name="camera_sorry">Lo sentimos, no es posible accesar a la cámara en este momento</string>
    <string name="camera_message_uploading">Subiendo imagen al servidor…</string>
    <string name="camera_message_upload_finished">Imagen transferida con éxito.</string>
    <string name="crouton_txt_uploading_image">subiendo imagen…</string>


    <string-array name="drop_down_credit_card_type">
        <item>VISA</item>
        <item>Master Card</item>
        <item>AMEX</item>
    </string-array>

    <!--Intro-->
    <string name="title_activity_instructions">InstructionsActivity</string>
    <string name="intro_welcome_title">Te damos la bienvenida!</string>
    <string name="intro_welcome_desc">Desliza para obtener información acerca de la aplicación.</string>
    <string name="intro_meter_title">Consulta tu consumo actual tomando foto de tu medidor.</string>
    <string name="intro_pay_title">Paga tu recibo en linea.</string>
    <string name="intro_promotion_title">Obtén promociones exclusivas como descuentos al pre-pagar</string>
    <string name="intro_final_title">Ahorra tiempo y dinero</string>
    <string name="intro_final_desc">No publicaremos nada sin tu consentimiento</string>
    <string name="btn_facebook_intro">Registrate con Facebook</string>
    <string name="btn_register_intro">Registrate</string>

    <string name="buttonLabelSettingsLogOut">Terminar Sesión</string>
    <string name="title_activity_meter_registration">MeterRegistrationActivity</string>
    <string name="dialogTitleRegisterMeterBE">Registrando el Medidor</string>
    <string name="DialogContentPleaseWait">Por favor espere…</string>
    <string name="DialogTitleCheckingParameters">Verificando Parámetros</string>
    <string name="DialogTitleRegisteringUser">Registrando Usuario</string>
    <string name="DialogTitlePaying">Realizando el Pago</string>

    <string name="titleContentServiceChooser">Seleccione su proveedor de servicios</string>

    <!--Transitions-->
    <string name="transitionFirstCardView">transitionFirstCardView</string>
    <string name="transitionJmas">jmasTransition</string>
    <string name="transitionReadingsToBills">readingsToBillsTransition</string>


    <!--misc-->
    <string name="toastImageUploadError">Hay un problema subiendo la imagen al servidor, por favor intente de nuevo</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="buttonTextOxxo">Generar Código OXXO</string>

    <!--Credit Card Errors-->
    <string name="creditCardErrorNumber">El numero de tarjeta es invalido</string>
    <string name="creditCardErrorExpiryDate">La fecha de expiración es invalida</string>
    <string name="creditCardErrorCCV">El código CCV es invalido</string>
    <string name="creditCardError">Los detalles de la tarjeta son inválidos</string>
    <string name="TACMustAgreedMessage">Tiene que estar de acuerdo con los términos y condiciones</string>
    <string name="button_cancel">Cancelar</string>
    <string name="button_send">Enviar</string>
    <string name="title_activity_barcode">Codigo OXXO</string>

</resources>