<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              tools:context="com.fourtails.usuariolecturista.fragments.PayAddCreditCardFragment"
              android:orientation="vertical"
              android:padding="35dp">

    <TextView
        style="@style/TextViewLabelMedium"
        android:text="@string/labelCreditCardType"
        android:id="@+id/textView7"/>

    <TextView
        style="@style/RobotoEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="VISA"
        android:id="@+id/textViewPayCCType"/>

    <TextView
        style="@style/TextViewLabelMedium"
        android:text="@string/labelCreditCardNumber"
        android:id="@+id/textView8"
        android:layout_marginTop="10dp"/>

    <TextView
        style="@style/RobotoEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/textViewPayCreditCardNumber"
        android:inputType="number"
        android:text="411111111111111"/>

    <TextView
        style="@style/TextViewLabelMedium"
        android:text="@string/labelNameOnCreditCard"
        android:layout_marginTop="10dp"
        android:id="@+id/textView9"/>

    <TextView
        style="@style/RobotoEditText"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/textViewPayCreditCardName"
        android:text="Carlos Labrado"/>

    <TextView
        style="@style/TextViewLabelMedium"
        android:text="@string/labelSecurityCode"
        android:layout_marginTop="10dp"
        android:id="@+id/textView10"/>

    <EditText
        style="@style/RobotoEditText"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editTextPayCCV"
        android:text="111"/>

    <TextView
        style="@style/TextViewLabelMedium"
        android:text="@string/labelExpirationDate"
        android:layout_marginTop="10dp"
        android:id="@+id/textView11"/>

    <TextView
        style="@style/RobotoEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:editable="false"
        android:focusable="false"
        android:id="@+id/textViewPayCreditCardExpirationDate"/>

    <CheckBox
        style="@style/RobotoCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelCheckBoxAgreedWithCCTAC"
        android:id="@+id/checkBoxPayAgreedTAC"
        android:checked="false"/>


    <TextView
        style="@style/RobotoEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/textViewLabelSubTotalPay"
        android:textSize="15sp"
        android:text="@string/labelSubTotal"
        android:layout_marginTop="20dp"/>

    <TextView
        style="@style/RobotoEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/textViewSubTotalPay"
        android:textSize="30sp"
        android:text="132.00"
        android:layout_marginTop="5dp"/>

    <Button
        style="@style/RobotoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/labelButtonPayFragmentPay"
        android:id="@+id/buttonPayFragmentPay"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>
