<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.fourtails.usuariolecturista.fragments.BillsFragment">


    <android.support.v7.widget.CardView
        android:id="@+id/cardViewBills"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:transitionName="@string/transitionJmas">

        <com.db.chart.view.LineChartView xmlns:chart="http://schemas.android.com/apk/res-auto"
            android:id="@+id/lineChartBills"
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:layout_margin="10dp"
            android:layout_weight=".30"
            android:background="@color/colorPrimaryJmas600"
            chart:chart_axisBorderSpacing="0dp"
            chart:chart_axisColor="@color/axis"
            chart:chart_labelColor="@color/label"
            chart:chart_typeface="Roboto-Regular.ttf"
            android:padding="5dp" />
    </android.support.v7.widget.CardView>

    <com.melnykov.fab.FloatingActionButton
        android:id="@+id/fabChangeGraphBills"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/cardViewBills"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:src="@drawable/ic_straighten_white_24dp"
        fab:fab_colorNormal="@color/colorJmasBlueReadings"
        fab:fab_colorPressed="@color/colorJmasBlueReadingsDarker"
        android:transitionName="@string/transitionReadingsToBills"
        android:layout_marginBottom="-40dp" />

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cardViewBillsBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/cardViewBills"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:transitionName="@string/transitionFirstCardView"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">


            <com.devspark.robototextview.widget.RobotoTextView
                android:id="@+id/textView"
                style="@style/TextViewMainPageLabel"
                android:text="@string/readingsLabelsLimitDate"
                android:textIsSelectable="false" />

            <com.devspark.robototextview.widget.RobotoTextView
                android:id="@+id/textViewBillingDateBills"
                style="@style/TextViewMainPage"
                android:text="26 de Abril 2015"
                android:textIsSelectable="true" />

            <!--<com.devspark.robototextview.widget.RobotoTextView-->
            <!--android:id="@+id/textView3"-->
            <!--style="@style/TextViewMainPageLabel"-->
            <!--android:layout_marginTop="10dp"-->
            <!--android:text="@string/billsLabelsLastBillAmount" />-->

            <!--<com.devspark.robototextview.widget.RobotoTextView-->
            <!--android:id="@+id/textViewTotalBalanceBills"-->
            <!--style="@style/TextViewMainPage"-->
            <!--android:text="" />-->

            <com.devspark.robototextview.widget.RobotoTextView
                android:id="@+id/textView3"
                style="@style/TextViewMainPageLabel"
                android:layout_marginTop="10dp"
                android:text="@string/billsLabelsLastBillAmount" />

            <com.devspark.robototextview.widget.RobotoTextView
                android:id="@+id/textViewSelectedBills"
                style="@style/TextViewMainPage"
                android:text="" />

            <com.devspark.robototextview.widget.RobotoTextView
                android:id="@+id/textView4"
                style="@style/TextViewMainPageLabel"
                android:layout_marginTop="10dp"
                android:text="@string/billsLabelsLastBillStatus" />

            <com.devspark.robototextview.widget.RobotoTextView
                android:id="@+id/textViewBillsStatus"
                style="@style/TextViewMainPage"
                android:text="" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <com.melnykov.fab.FloatingActionButton
        android:id="@+id/fabPay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_payment_white_24dp"
        fab:fab_colorNormal="@color/colorPrimaryJmas"
        fab:fab_colorPressed="@color/colorPrimaryDarkerJmas"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="25dp"
        android:layout_marginRight="20dp" />

    <com.devspark.robototextview.widget.RobotoTextView
        android:id="@+id/textViewPrepayInvitation"
        style="@style/TextViewMainPageLabel"
        android:text="@string/billsLabelsPrepayInvitation"
        android:layout_alignWithParentIfMissing="false"
        android:layout_alignTop="@+id/fabPay"
        android:layout_toLeftOf="@+id/fabPay"
        android:layout_toStartOf="@+id/fabPay"
        android:layout_marginTop="20dp"
        android:layout_marginRight="10dp"
        android:visibility="invisible" />

    <com.devspark.robototextview.widget.RobotoTextView
        style="@style/TextViewIntroDesc"
        android:text="@string/billsLabelsNoBillsToShow"
        android:id="@+id/textViewNoBillsMsg"
        android:layout_above="@+id/fabChangeGraphBills"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="48dp" />


</RelativeLayout>
